--- a/index.html
+++ b/index.html
@@ -5,76 +5,76 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Business Facilitator</title>
   <style>
-    * {margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif;}
-    html {scroll-behavior: smooth;}
-    body {color: #333; background: #f9f9f9; line-height: 1.6;}
-    header {background: #003366; color: #fff; padding: 0.8rem 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000;}
-    .logo {display: flex; align-items: center; gap: 10px;}
-    .logo img {height: 45px; width: 45px; border-radius: 50%; object-fit: cover;}
-    .logo h1 {font-size: 1.5rem; letter-spacing: 1px;}
-    nav ul {list-style: none; display: flex; gap: 2rem;}
-    nav a {color: #fff; text-decoration: none; font-weight: 500; transition: color 0.3s ease;}
-    nav a:hover {color: #ffcc00;}
-    section {padding: 4rem 10%;}
-    #home {background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover; color: #fff; text-align: center; padding: 8rem 2rem;}
-    #home h1 {font-size: 3rem; margin-bottom: 1rem;}
-    #home p {font-size: 1.2rem; max-width: 600px; margin: auto;}
-    #about, #services, #contact {background: #fff; margin: 2rem 0; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); padding: 3rem 2rem;}
-    #about h2, #services h2, #contact h2 {color: #003366; text-align: center; margin-bottom: 1rem;}
-    #services .service-list {display: flex; flex-wrap: wrap; justify-content: space-around; margin-top: 2rem;}
-    .service {flex: 1 1 250px; background: #f0f4ff; margin: 1rem; padding: 1.5rem; border-radius: 10px; text-align: center; transition: transform 0.3s ease, box-shadow 0.3s ease;}
-    .service:hover {transform: translateY(-5px); box-shadow: 0 4px 15px rgba(0,0,0,0.15);}
-    footer {background: #003366; color: #fff; text-align: center; padding: 1rem 0;}
-    @media(max-width: 768px){nav ul{flex-direction: column; gap: 1rem;} #home h1{font-size: 2.2rem;} .service-list{flex-direction: column; align-items: center;}}
+    body {font-family: Arial, sans-serif; margin: 0; padding: 0;}
+    header {background-color: #003366; color: white; padding: 20px; text-align: center;}
+    nav {display: flex; justify-content: space-between; align-items: center; background-color: #002244; padding: 10px 20px;}
+    nav a {color: white; text-decoration: none; margin: 0 10px;}
+    nav a:hover {text-decoration: underline;}
+    .banner {text-align: center; padding: 60px 20px; background-color: #f0f4f8;}
+    .banner h1 {font-size: 2.5em; color: #003366;}
+    .banner p {color: #333;}
+    .btn {background-color: #003366; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;}
+    .btn:hover {background-color: #0055aa;}
+    .modal {display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7);}
+    .modal-content {background: white; margin: 10% auto; padding: 20px; border-radius: 10px; width: 90%; max-width: 600px; position: relative;}
+    .close {position: absolute; top: 10px; right: 20px; font-size: 24px; cursor: pointer; color: #333;}
+    iframe {width: 100%; height: 500px; border: none;}
+    .success-message {display: none; text-align: center; color: green; font-weight: bold; margin-top: 15px;}
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="logo.png" alt="Business Facilitator Logo">
-      <h1>Business Facilitator</h1>
+  <nav>
+    <div class="logo"><strong>Business Facilitator</strong></div>
+    <div class="menu">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#" id="openModalNav">Sign Up Now</a>
+      <a href="#">Contact</a>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section id="home">
+  </nav>
+
+  <header class="banner">
     <h1>Welcome to Business Facilitator</h1>
-    <p>Your trusted partner in affiliate marketing and business growth solutions.</p>
-  </section>
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Business Facilitator is a professional affiliate marketing platform designed to help brands and businesses expand their reach through strategic partnerships and digital promotions. Our goal is to simplify marketing connections and generate quality results for every client.</p>
-  </section>
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="service-list">
-      <div class="service">
-        <h3>Affiliate Network</h3>
-        <p>Connect with top-performing affiliates to boost your business visibility and sales.</p>
-      </div>
-      <div class="service">
-        <h3>Lead Generation</h3>
-        <p>Generate high-quality B2B and B2C leads tailored to your niche and business goals.</p>
-      </div>
-      <div class="service">
-        <h3>Digital Promotion</h3>
-        <p>Enhance your online presence through optimized campaigns and marketing strategy.</p>
-      </div>
+    <p>Your trusted partner in B2B growth and lead generation.</p>
+    <button class="btn" id="openModalBtn">Sign Up Now</button>
+  </header>
+
+  <div id="signUpModal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>Sign Up Form</h2>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOT-om2B14IcKJBTjtYgPCm5HxIA6oBWFjIfN8mbLLU0SS0w/viewform?usp=header"></iframe>
+      <div class="success-message" id="successMsg">✅ Thank you for signing up! We’ll contact you soon.</div>
     </div>
-  </section>
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p style="text-align:center;">We’d love to hear from you! Reach out for collaboration or inquiries.</p>
-    <p style="text-align:center; margin-top:1rem;">📧 Email: info@businessfacilitator.com<br>📞 Phone: +91 98765 43210</p>
-  </section>
-  <footer>
-    <p>&copy; 2025 Business Facilitator. All Rights Reserved.</p>
-  </footer>
+  </div>
+
+  <script>
+    const modal = document.getElementById('signUpModal');
+    const openModalBtn = document.getElementById('openModalBtn');
+    const openModalNav = document.getElementById('openModalNav');
+    const closeModal = document.getElementById('closeModal');
+    const successMsg = document.getElementById('successMsg');
+
+    function openModal() {
+      modal.style.display = 'block';
+    }
+    function closeModalFunc() {
+      modal.style.display = 'none';
+    }
+    openModalBtn.onclick = openModal;
+    openModalNav.onclick = openModal;
+    closeModal.onclick = closeModalFunc;
+    window.onclick = function(event) {
+      if (event.target == modal) closeModalFunc();
+    };
+
+    window.addEventListener('message', function(event) {
+      if (event.data === 'formSubmitted') {
+        successMsg.style.display = 'block';
+        setTimeout(() => { modal.style.display = 'none'; successMsg.style.display = 'none'; }, 3000);
+      }
+    });
+  </script>
 </body>
 </html>
